--- a/templates/index.html
+++ b/templates/index.html
@@ -33,6 +33,11 @@
         </form>
       </li>
       <li class="nav-item">
+        <form action='finishLive' btnFinishmethod='GET'>
+            <input class="btn btn-primary" type="submit" id="btnFinishLive" name="btnFinishLive" value="Submit Live">
+        </form>
+      </li>
+      <li class="nav-item">
         <form action='myMessages' btnFinishmethod='GET'>
             <input class="btn btn-primary" type="submit" id="btnMessages" name="btnMessages" value="See my messages">
         </form>
