--- a/templates/usersDetails.html
+++ b/templates/usersDetails.html
@@ -11,6 +11,7 @@
   <div id="title">{{userName}}'s details</div>
   <div>Main tag: {{mainTag}}</div>
   <div>Last login: {{lastLogin}}</div>
+  <div>Has notif: {{hasNotif}}</div>
   <form method="POST">
     <div class="d-flex justify-content-center">
         <input class="btn btn-primary" id="pageBtn" type='submit' name = "button" value='See their page'/>
