I don't know what's new

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -193,6 +193,15 @@ body {
   color: white;
 }
 
+#btnFinishLive {
+  margin: 10px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background 0.23s;
+  background-color: #c86071;
+  color: white;
+}
+
 #navBar {
   max-height: 50px;
 }
